manifests/fss/base/lab-test-user-c56486f8.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lab-test-user-c56486f8
  namespace: dis
  labels:
    app: jupyter-session
    app.kubernetes.io/name: jupyter-session
    app.kubernetes.io/managed-by: fss-dis-server-node
    app.kubernetes.io/component: user-jupyter
    platform.dev/session-id: test-user-c56486f8
  annotations:
    platform.dev/username: test-user
    platform.dev/workspace-subpath: users/test-user-c56486f8
    platform.dev/launch-image: 192.168.56.32/app/jupyter:latest
    platform.dev/workspace-pvc: ""
spec:
  restartPolicy: Always
  terminationGracePeriodSeconds: 15
  hostname: lab-test-user-c56486f8
  subdomain: jupyter-named-pod
  containers:
    - name: jupyter
      image: 192.168.56.32/app/jupyter:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8888
      resources:
        requests:
          cpu: 100m
          memory: 256Mi
        limits:
          cpu: "1"
          memory: 1Gi
      volumeMounts:
        - name: jupyter-workspace
          mountPath: /workspace/user-home
          subPath: users/test-user-c56486f8
      readinessProbe:
        httpGet:
          path: /jupyter/lab
          port: 8888
        initialDelaySeconds: 5
        periodSeconds: 5
        timeoutSeconds: 2
        failureThreshold: 18
      livenessProbe:
        httpGet:
          path: /jupyter/lab
          port: 8888
        initialDelaySeconds: 20
        periodSeconds: 10
        timeoutSeconds: 2
        failureThreshold: 6
  volumes:
    - name: jupyter-workspace
      emptyDir: {}
