manifests/fss/base/fss-dis-frontend-subpath-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fss-dis-frontend-subpath
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /fss-dis-frontend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fss-dis-frontend
                port:
                  number: 80
